5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1638_652.log
== TEST (2019-04-11 11:14:41) 
-- CODE:
n = int(input("numero: "))
if (100 <= n <= 999):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:14:49) 
-- CODE:
n = int(input("numero: "))
if (100 <= n <= 999):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:14:49) 
-- CODE:
n = int(input("numero: "))
if (100 <= n <= 999):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.15347
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:14:51) 
-- CODE:
n = int(input("numero: "))
if (100 <= n <= 999):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.164547
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
SIM
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
SIM
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:15:00) 
-- CODE:
n = int(input("numero: "))
if (100 <= n <= 999):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:15:08) 
-- CODE:
n = int(input("numero: "))
if (100 <= n <= 999):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
SIM
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:19:17) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
print(n)
n = 100 <= n <= 999
if ():
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
728
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:19:41) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
print(n)
n = 100 <= n <= 999
if ():
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
728
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:21:12) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a == 0
n = 100 <= n <= 999
if (n - a == x):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:22:04) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:22:11) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 11:22:24) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.221558
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:22:58) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 
print(n)
#n = 100 <= n <= 999
i#f (x == 0):
	#print("SIM")
#else:
#	print("NAO")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    i#f (x == 0):
NameError: name 'i' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:11) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 
print(n)
#n = 100 <= n <= 999
#f (x == 0):
	#print("SIM")
#else:
#	print("NAO")
-- OUTPUT:
728
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 11:23:34) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 
print(a , b, c)
#n = 100 <= n <= 999
#f (x == 0):
	#print("SIM")
#else:
#	print("NAO")
-- OUTPUT:
7 2 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:43:45) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
f (x == 0):
	print("SIM")
else:
	print("NAO")
-- ERROR:
File "XXXX", line 11
    f (x == 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:44:20) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
f (x == 0):
	print("SIM")
else:
	print("NAO")
-- ERROR:
File "XXXX", line 11
    f (x == 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:44:21) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
f (x == 0):
	print("SIM")
else:
	print("NAO")
-- ERROR:
File "XXXX", line 11
    f (x == 0):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:44:41) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:44:44) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 11:45:32) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.200075
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:46:00) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a 

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:46:14) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a1

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-22 11:46:20) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a1

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- EXECUTION TIME:
0.146308
-- TEST CASE 1:
---- input:
728
---- correct output:
SIM
---- user output:
NAO
-- TEST CASE 2:
---- input:
789
---- correct output:
NAO
---- user output:
NAO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-22 11:46:36) 
-- CODE:
n = int(input("numero: "))
a = n // 100
a1 = n % 100
b = a1 // 10
b1 = a1 % 10
c = b1 // 1
c1 = b1 % 1
x = n / n - a1

n = 100 <= n <= 999
if (x == 0):
	print("SIM")
else:
	print("NAO")
-- OUTPUT:
NAO
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
